src/style.css
* {
    font-family: 'Libre Baskerville', serif;
}

a {
    text-decoration: none;
    color: inherit;
}

body {
    background-color: #f6d274;
    background-image: url("~/src/images/rosemary_small.jpg"), url("~/src/images/garlic_small.jpg");
    background-position: -60px -60px, right -40px bottom -60px;
    background-repeat: no-repeat;
    background-attachment: fixed;
    margin: 0px;
    padding: 0px;
    height: 100vh;
    display: flex;
    justify-content: center;
}

.window {
    box-sizing: border-box;
    background-color: #FFF;
    margin: 45px 0px 35px 0px;
    padding: 0px;
    max-width: 1500px;
    min-width: 600px;
}

.container {
    width: 60vw;
    max-width: 1500px;
    min-width: 720px;
}

.header {
    display: flex;
    height: 80px;
    justify-content: space-between;
}

.logo img {
    width: 85px;
    height: auto;
    margin: 0px 15px 0px 30px;
}

.logo {
    display: flex;
    align-items: center;
}

h2 {
    font-family: 'Buenard', serif;
    font-size: 40px;
    color: #ffb800ff;
}

ul {
    box-sizing: border-box;
    margin: 0px;
    padding-bottom: 10px;
    width: 350px;
    height: 80px;
    display: flex;
    justify-content: space-evenly;
    align-items: flex-end;
    font-size: 12px;
}

li {
    list-style-type: none;
}

.hero img {
    max-width: 1500px;
    min-width: 720px;
    height: auto;
    width: 60vw;
}

.hero {
    position: relative;
}

.hero button {
    background-color: #ffb800ff;
    color: #FFF;
    border: none;
    padding: 8px;
    border-radius: 7px;
    cursor: pointer;
}

.heroText {
    position: absolute;
    float: left;
    left: 90px;
    top: 80px;
    width: 25vw;
    min-width: 350px;
}

h1 {
    font-size: 2em;
    font-family: 'Buenard', serif;
    color: rgb(36, 36, 36);
}

.quote {
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    height: 290px;

}

h3 {
    font-size: 22px;
    font-weight: bold;
    color: rgb(100, 100, 100);

}

.features {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    padding-bottom: 100px;
    place-items: center;

}

.feature img {
    height: 50px;
}

.feature {
    width: 200px;
    display: flex;
    flex-direction: column;
    align-items: center;
    font-size: 12px;
    text-align: center;
    color: rgb(36, 36, 36);
}

h4 {
    font-size: 16px;
    color: rgb(221, 161, 10);
    font-weight: 900;
}

.footer {
    display: flex;
    justify-content: center;
    align-items: center;
    color:rgb(19, 19, 19);
    font-size: 10px;
}

.footer img {
    width: 20px;
    margin-right: 5px;
}

.story {
    box-sizing: border-box;
    margin: 40px;
}

.story img {
    width: 20vw;
    min-width: 230px;
}

#story1 {
    display: grid;
    grid-template-columns: 1fr 2fr;
    gap: 15px;
    place-items: center;
    margin-bottom: 55px;
}

#story2 {
    display: grid;
    grid-template-columns: 2fr 1fr;
    gap: 15px;
    place-items: center;
    margin-bottom: 15px;
}

.contact {
    box-sizing: border-box;
    margin: 40px;
}

table {
    font-size: 12px;
    text-align: right;
}

td {
    padding-left: 15px;
}

.map {
    display: flex;
    justify-content: center;
    margin: 40px 0px;
}

.menu {
    box-sizing: border-box;
    margin: 40px;
}

.menuGrid {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    place-items: center;
}

.gridElement {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    font-size: 12px;
}

.menuGrid img {
    width: 15vw;
    min-width: 180px;
    margin: 15px 0px 10px;
}

